Catalog section items align fixed

--- a/assets/src/components/main/catalog/_catalog.scss
+++ b/assets/src/components/main/catalog/_catalog.scss
@@ -17,17 +17,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
-
     flex-wrap: wrap;
+    margin: -10px;
   }
   &__item {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 43%;
+    // width: 43%;
     min-height: 170px;
+    flex: 1 0 40%;
+    margin: 10px;
     padding: 15px;
     text-decoration: none;
     border-radius: 4px;
@@ -62,17 +63,15 @@
       flex-wrap: wrap;
       justify-content: center;
       align-items: flex-start;
-      gap: 20px;
-  
-      flex-wrap: wrap;
     }
     &__item {
       display: flex;
-      flex-direction: row;
+      // flex-direction: row;
       justify-content: flex-start;
       align-items: center;
-      gap: 20px;
-      width: 23%;
+      flex: 1 0 20%;
+      // gap: 20px;
+      // width: 23%;
       min-height: unset;
       height: 100px;
       padding: 20px;
